<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background1"
    tools:context=".Activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:orientation="vertical">



            <ImageView
                android:layout_width="74.7dp"
                android:layout_height="74.7dp"
                android:scaleType="centerCrop"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logo" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_netdollar" />

        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="50dp">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:cardCornerRadius="5dp"
            android:elevation="9dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="20dp">

                    <EditText
                        android:id="@+id/edtphone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:hint="@string/login_phone"
                        android:layout_margin="10dp"
                        android:padding="15dp"
                        android:background="@drawable/round_border"
                        android:textSize="13dp" />


                    <EditText
                        android:id="@+id/edtpassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:hint="@string/login_password"
                        android:background="@drawable/round_border"
                        android:layout_margin="10dp"
                        android:padding="15dp"
                        android:textSize="13dp"
                        android:drawableRight="@drawable/ic_eye"/>

                <Button
                    android:id="@+id/btn_connecter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:background="@drawable/rounded_button"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/connect"
                    android:textAllCaps="false"
                    android:textColor="#ffffff" />

            </LinearLayout>
        </android.support.v7.widget.CardView>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/forget_password"
                android:textColor="@color/colorAccent"
                android:textSize="13sp"/>
            <TextView
                android:id="@+id/txtnewcompte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_account"
                android:gravity="center"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="30dp"
                android:textSize="13sp"/>

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>

