<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background">

    <android.support.v7.widget.CardView
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:cardCornerRadius="5dp"
        android:elevation="15dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"

            android:background="@drawable/rounded_button">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/curr_balance"
                android:textColor="@color/background"
                android:textSize="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="VND"
                android:layout_gravity="center"
                android:textColor="@color/background"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <View
                android:layout_gravity="center"
                android:layout_width="60dp"
                android:layout_height="1dp"
                android:background="@color/background" />
            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="40dp"
                android:textStyle="bold"
                android:textColor="@color/background"
                android:text="00.00" />
            <View
                android:layout_gravity="center"
                android:layout_width="180dp"
                android:layout_height="1dp"
                android:background="@color/background"
                />
            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/add_funds"
                android:textColor="@color/background"
                android:textSize="15dp"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:orientation="vertical">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        android:elevation="15dp">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activites_recentes"
            android:textColor="@color/colorAccent"
            android:textSize="15dp"
            android:textStyle="bold"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:layout_margin="15dp">
            <TextView
                android:layout_alignParentStart="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Type"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Date"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                android:textStyle="bold"/>
        </RelativeLayout>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rltransaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </android.support.v7.widget.RecyclerView>
    <ListView

        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/background">

    </ListView>
</LinearLayout>


    </LinearLayout>


    </android.support.v7.widget.CardView>
    </LinearLayout>
</LinearLayout>